--- a/4 Ergebnisse/Ergebnisse.tex
+++ b/4 Ergebnisse/Ergebnisse.tex
@@ -52,6 +52,9 @@ Den Entfehlungen von \textcite{Moderation_SPSS} folgend, wurde der Interaktionst
 \section{Manipulationscheck}    \label{sec_4.3}
 Nachfolgend werden die Ergebnisse der vier Manipulationschecks in der folgenden Reihenfolge aufgeführt: Gewaltart, Geschlecht des Opfers, soziökonomischer Status der betroffenen Person und abschließend der Kulturelle Hintergrund.
 
+% griechischer Buchstabe = phi (V-Wert = phi nur mit minus)
+% Gewaltart x²(1) = 485,52, p < .001, V = .75, Täter*innen-Geschlecht x²(1) = 748,16, p < .001, φ = .93, Sozio-ökonomischer Status x²(1) = 422,37, p < .001, φ = .70 und kultureller Status x²(1) = 789,68, p < .001, V = .96
+
 
 \input{4 Ergebnisse/Tabelle Manipulationscheck.tex}
 \input{4 Ergebnisse/Tabelle Kreuztabelle Geschlecht.tex}
@@ -69,7 +72,7 @@ In Tabelle~\ref{KT_SES} sind die Werte dieser Manipulationsprüfung nochmals zus
 Die höchste Rate an Richtigkeit gab es bei dem Manipulationscheck des kulturellen Status. Hier gaben 422 (97.70\%) Personen bzw. 423 (97.90\%) die richtige Antwort. Auch dieser Chi$^2$-Test ist mit einem Wert von 789.68 signifikant ($p<$.001). 
 In Tabelle~\ref{KT_kult} sind die Werte dieser Manipulationsprüfung nochmals zusammengefasst.
 
-Bei der Kontrollfrage gaben zwei Personen an, nicht sinnvolle Angaben hinterlegt zu haben. Da es statistisch keinen unterschied gibt, ob sie ausgeschlossen werden oder nicht, verblieben sie im Datensatz.
+Bei der Kontrollfrage gaben vier Personen an, nicht sinnvolle Angaben hinterlegt zu haben. Da es statistisch keinen unterschied gibt, ob sie ausgeschlossen werden oder nicht, verblieben sie im Datensatz.
 
 
 \section{Explorative Ergebnisse}    \label{sec_4.4}
