--- a/Titelblatt.tex
+++ b/Titelblatt.tex
@@ -5,7 +5,7 @@
 
     SRH Hochschule Heidelberg\\
     Fakultät für Angewandte Psychologie\\
-    Staatlich anerkante Hochschule\\[3cm]
+    Staatlich anerkannte Hochschule\\[3cm]
     % Dieser Teil bleibt fix
     
     Bachelor-Thesis\\   
