--- a/2 Theorie/2.1.1 Aggressivität.tex
+++ b/2 Theorie/2.1.1 Aggressivität.tex
@@ -3,55 +3,53 @@
 %Aggressivität vs Aggression
 Aggressivität ist nicht gleichzusetzen mit Aggression. Ersteres bezieht sich auf eine überdauernde Disposition eines Individuums zu aggressivem Verhalten. Diese Bereitschaft wird nich immer offen ausgeführt und ist unterschiedlich ausgeprägt
 \parencite{Def_unterscheidung_Springer, Def_Aggressivität_Duden, Def_Aggressivität_Spektrum}. Aggressivität entspricht demzufolge einer Verhaltenstendez, einer übergeordnete Charaktereigenschaft, die sich in Form von Aggression oder aggressivem Verhalten zeigt. Personen, die Aggressivität als Teil ihrer Persönlichkeit haben, können beispielsweise die folgenden Charakteristika aufweisen \parencite{Def_Aggressivität_eng1}:
-\begin{itemize} [leftmargin=1.25cm]
+\begin{enumerate} [leftmargin=1.25cm] 
       \item Problematik die Emotionen und Gedanken anderer zu verstehen und nachzuempfinden
       \item externe Attribution
       \item Soziale Manipulation, um das Bedürfnis von Kontrolle über andere 
             Personen zu befriedigen
       \item Emotionale und affektive Defizite zeigen sich durch Aggressivität auf Grund einer fehlerhaften Wahnehmung von fehlender Wertschätzung anderer
       \item Aggressive Personen sind der Meinung, dass sie für ihre Verwandten oder nahestehenden Menschen nicht wichtig sind
-\end{itemize}
+\end{enumerate}
 
 %Aggression
 Aggression hingegen ist als vorübergehende Handlungsart zu verstehen, die es zum Ziel hat eine Person oder einen Gegenstand zu verletzen oder zu schädigen
 \parencite{Def_Aggression_1939, Def_unterscheidung_Springer, Def_Aggression_Duden}.
 Ursprünglich kommt das Wort Aggression aus dem Lateinischen und bedeutet 
-\enquote{an eine Sache heran gehen} oder \enquote{etwas in Angriff nehmen} \parencite{was_Aggression} und ist weder positiv noch negativ. Im normalen Sprachgebrauch besitzt dieses Wort jedoch häufig eine negative Konnotation und wird von großen Teilen der Bevölkerung missbilligt. Aggressive Handlungen reichen von negativen Äußerungen über Mitmenschen sowie das Schreien oder Fluchen bis hin zu beabsichtigter Schädigung fremden Eigentums. 
+\textit{an eine Sache heran gehen} oder \textit{etwas in Angriff nehmen} \parencite{was_Aggression} und ist weder positiv noch negativ. Im normalen Sprachgebrauch besitzt dieses Wort jedoch häufig eine negative Konnotation und wird von großen Teilen der Bevölkerung missbilligt. Aggressive Handlungen reichen von negativen Äußerungen über Mitmenschen sowie das Schreien oder Fluchen bis hin zu beabsichtigter Schädigung fremden Eigentums oder Personen. 
 
 Negative Aggression gilt aufgrund der negativen Emotionen, die durch sie ausgelöst werden, als ungesund. Dauerhaftes Bestehen solcher Emotionen kann  schädlich für den Menschen sein \parencite{Aggression}.
 
 Wenn Aggression aber das eigene Überleben, den eigenen Schutz oder auch die Bewahrung von Beziehungen fördert, dann bezeichnet \textcite{positive_aggression} 
 es als positives und gesundes Verhalten. Wie \textcite{Aggression} zusammenfasst, ist es, im Sinne der positiven Aggression, während der Entwicklungsjahre eines 
-Kindes und Jugendlichen notwendig ein gewisses Maß an Aggressivität zu besitzen. Dies hilf dem Heranwachsenden beim Ausbau von Autonomie und der eigenen Identität. Des Weiteren wird ein gewisses Grad an Aggression im Zusammenhang mit Wettkämpfen oder anderen Arten von Konkurrenz meist sogar erwünscht. Wenn die Aggression in die richtige Richtung gelenkt wird, ist sie die nötige Kraft, um ein gesundes Maß an Selbstbewusstsein, Dominanz und Unabhängigkeit zu erlangen \parencite{Aggression}. Positive Aggression hat viele Formen und Facetten. Ergänzend zu \textcite{positive_aggression} zählt \textcite{jack1999behind}
-das Streben nach neuen Möglichkeiten und die Verteidigung gegen Schaden als Ausdruck positiver Aggression.
+Kindes und Jugendlichen notwendig, ein gewisses Maß an Aggressivität zu besitzen. Dies hilf dem Heranwachsenden beim Ausbau von Autonomie und der eigenen Identität. Des Weiteren wird ein gewisser Grad an Aggression im Zusammenhang mit Wettkämpfen oder anderen Arten von Konkurrenz meist sogar erwünscht. Wird die Aggression in die richtige Richtung gelenkt, ist sie die nötige Kraft, um ein gesundes Maß an Selbstbewusstsein, Dominanz und Unabhängigkeit zu erlangen \parencite{Aggression}. Positive Aggression hat viele Formen und Facetten. Ergänzend zu \textcite{positive_aggression} zählt \textcite{jack1999behind} selbst das Streben nach neuen Möglichkeiten und die Verteidigung gegen Schaden als Ausdruck positiver Aggression.
 
 %Aggression nicht gleich Gewalt
-Laut dem Duden ist Gewalt die \enquote{gegen jemanden, etwas [rücksichtslos] angewendete physische oder psychische Kraft, mit der etwas erreicht werden soll} \parencite{Gewalt_Duden}. Diese Definition ähnelt der der Aggression. Oftmals werden diese Wörter im Sprachgebrauch gleichdeutend verwendet. Sie sind jedoch nicht als Synonyme zu gebrauchen. Die Trennung beider Begriffe ist dennoch nicht einfach. \textcite{Def_Aggressivität_vs_violence} trennt diese beiden Begriffe wie folgt. Aggression ist ein natürlicher und angeborener Instinkt, der nicht ausschließlich dem Menschen zuzuschreiben ist. Gewalt hingegen ist ein von der Kultur bestimmtes Element und Teil der menschlichen Zivilisation. Wie bereits näher gebracht ist die Aggression, wie ihre höhere Instanz die Charaktereigenschaft Aggressivität, von biologischem Ursprung, dessen Ziel und Zweck das Überleben ist \parencite{Def_Aggressivität_vs_violence, Aggression}.
-Die positiven Aggression von Liu ähnelt der Auffassung von Clark. Letztere weist aber auch darauf, dass durch die Beziehungen zu Gewalt die Aggression zu einem soziokulutrellen Aspekt geworden ist \parencite{Def_Aggressivität_vs_violence}.
+Laut Duden ist Gewalt die \enquote{gegen jemanden, etwas [rücksichtslos] angewendete physische oder psychische Kraft, mit der etwas erreicht werden soll} \parencite{Gewalt_Duden}. Diese Definition ähnelt der der Aggression. Oftmals werden diese Wörter im Sprachgebrauch gleichdeutend verwendet. Sie sind jedoch nicht als Synonyme zu gebrauchen. Die Trennung beider Begriffe ist dennoch nicht einfach. \textcite{Def_Aggressivität_vs_violence} trennt diese beiden Begriffe wie folgt. Aggression ist ein natürlicher und angeborener Instinkt, der nicht ausschließlich dem Menschen zuzuschreiben ist. Gewalt hingegen ist ein von der Kultur bestimmtes Element und Teil der menschlichen Zivilisation. Wie bereits näher gebracht ist die Aggression, wie ihre höhere Instanz die Charaktereigenschaft Aggressivität, von biologischem Ursprung, dessen Ziel und Zweck das Überleben ist \parencite{Def_Aggressivität_vs_violence, Aggression}.
+Die positiven Aggression von Liu ähnelt der Auffassung von Clark. Letztere weist aber auch darauf hin, dass durch die Beziehungen zu Gewalt die Aggression zu einem soziokulutrellen Aspekt geworden ist \parencite{Def_Aggressivität_vs_violence}.
 Dies kann ein möglicher Grund für die erschwerte Abgrenzung zwischen diesen beiden
 Begriffen sein. 
 
-Die negative Aggression von Liu lässt sich zu Teilen mit der Gewalt von Clark vergleichen \parencite{Def_Aggressivität_vs_violence, Aggression}. Sie sieht Gewalt als erlerntes Verhalten, dass durch kulturelle Ideologien und Werte geprägt ist,  geplant und absichtlich ausgeführt wird. Der unterschied zwischen Aggression und Gewalt liegt darin, dass Gewalt versucht Macht und Kontrolle zu erhalten, während Aggression dem Eigenschutz dient \parencite{Def_Aggressivität_vs_violence}.
+Die negative Aggression von Liu lässt sich zu Teilen mit der Gewalt von Clark vergleichen \parencite{Def_Aggressivität_vs_violence, Aggression}. Sie sieht Gewalt als erlerntes Verhalten, das durch kulturelle Ideologien und Werte geprägt ist, geplant und absichtlich ausgeführt wird. Der Unterschied zwischen Aggression und Gewalt liegt darin, dass Gewalt versucht Macht und Kontrolle zu erhalten, während Aggression dem Eigenschutz dient \parencite{Def_Aggressivität_vs_violence}.
 
-Zusammenfassend ist es nicht unbedingt ratsam zu versuchen die Begriffe Aggression, Aggressivität und Gewalt so klar abzutrennen. Die Nutzung und sprachliche Bedeutung der Worte haben sich im Wandel der Zeit verändert, wodurch sich die Bedeutungen der einzelnen Begriffe näher gekommen sind. Des Weiteren ist die klare Abtrennung durch die Verwobenheit der Konstrukte erschwert. Zusätzlich zu den hier aufgeführten Begriffen gibt es noch weitere, die mit dieser Thematik verwandt sind, auf die in dem Umfang dieser Arbeit jedoch nicht eingegangen werden. Des Weiteren kann Gewalt, so wie die Aggression, in unterschiedliche Arten unterteilt werden. Eine solche Unterteilung wird in Kapitel ~\ref{subsec_2.1.2} vorgenommen.
+Zusammenfassend ist es nicht ratsam, zu versuchen die Begriffe Aggression, Aggressivität und Gewalt so klar abzutrennen. Die Nutzung und sprachliche Bedeutung der Worte haben sich im Wandel der Zeit verändert, wodurch sich die Bedeutungen der einzelnen Begriffe näher gekommen sind. Des Weiteren ist die klare Abtrennung durch die Verwobenheit der Begriffe erschwert. Zusätzlich zu den hier aufgeführten Ausdrücken gibt es noch Weitere, die mit dieser Thematik verwandt sind, auf die im Umfang dieser Arbeit jedoch nicht eingegangen werden. Des Weiteren kann Gewalt, so wie die Aggression, in unterschiedliche Arten unterteilt werden. Eine solche Unterteilung wird in Kapitel ~\ref{subsec_2.1.2} vorgenommen.
 
 
 %sexuelle Aggro 9.5.2 im sozio buch
 
 \subsubsection{Aggressionsarten}    \label{subsubsec_2.1.3.1}
 %Arten von aggressivem Verhalten/ Aggressivität/ Aggression
-In den vorangegangenen Paragraphen wurde bereits auf unterschiedliche Arten von Aggression eingegangen, auch wenn sie nicht explizit genannt wurden. In dieser Arbeit werden auf die folgenden Typen von Aggression eingegangen: impulsive, instrumentelle, physische und abschließenden verbale Aggression.
+In den vorangegangenen Paragraphen wurde bereits auf unterschiedliche Arten von Aggression eingegangen, auch wenn sie nicht explizit genannt wurden. In dieser Arbeit wird auf die folgenden Typen von Aggression untersucht: impulsive, instrumentelle, physische und abschließend verbale Aggression.
 
 % impulsive Aggression
-Die \textit{impulsive}, oder auch affektive Aggression ist die unvorhersehbare und automatische Darbietung von Gewalt. Oftmals entsteht sie aus dem momentan erlebten Emotionen ohne über die eigendliche Handlung oder ihre Folgen nachzudenken. Diese Reaktion auf eine reale, oder auch eingebildete Provokation, kann unkontrolliert oder unverhaltnismäßig erscheinen \parencite{impulsive_instrumental_aggro_healtline, impulsive_aggro}. Impulsive Aggression ist bei einigen psychischen Störungen wie beispielsweise ADHS, Zwangsstörungen, oder bipolare Störungen zu beobachten \parencite{impulsive_aggro_psych_Störung}.
+Die \textit{impulsive}, oder auch \textit{affektive} Aggression ist die unvorhersehbare und automatische Äußerung von Gewalt. Oftmals entsteht sie aus dem momentan erlebten Emotionen ohne über die eigendliche Handlung oder ihre Folgen nachzudenken. Diese Reaktion auf eine reale, oder auch eingebildete Provokation, kann unkontrolliert oder unverhältnismäßig erscheinen \parencite{impulsive_instrumental_aggro_healtline, impulsive_aggro}. Impulsive Aggression ist bei einigen psychischen Störungen wie beispielsweise ADHS, Zwangsstörungen, oder bipolarer Störung zu beobachten \parencite{impulsive_aggro_psych_Störung}.
 
 % instrumentelle Aggression
-Wie die Bezeichnung diese Art von Aggression nahelegt, handelt es sich bei der 
-\textit{instrumentellen} oder kognitiven Aggression um ein Hilfsmittel um ein größeres Ziel zu erreichen. Hierbei besteht keine zwangläufige Absicht einer Person Schaden zuzuführen \parencite{instrumental_aggro, instrumental_dictionary}.
-Ein Beispiel instrumenteller Gewalt sind Auftragskiller und zu gewissem Grad auch Soldaten, die für die Zielerreichung des Geldes Personenschaden als Nebeneffekt annehmen. Diese Darbietung von Aggression ist kalkulierter und zielgerichteter ohne die Kontrolle zu verlieren \parencite{impulsive_instrumental_aggro_healtline}.
+Wie die Bezeichnung der \textit{instrumentellen} oder \textit{kognitiven} Aggression nahelegt, handelt es sich hierbei um ein Hilfsmittel, um ein größeres Ziel zu erreichen. Dabei besteht keine zwangläufige Absicht einer Person Schaden zuzuführen \parencite{instrumental_aggro, instrumental_dictionary}.
+Ein Beispiel instrumenteller Gewalt sind Auftragskiller und Söldner, die gezielt und geplant Aggression ausüben, um ein höhergestelltes Ziel zu erlangen. Diese Äußerung von Aggression ist kalkulierter und zielgerichteter als die impulsive Aggression, ohne die Kontrolle zu verlieren \parencite{impulsive_instrumental_aggro_healtline}.
 
 % physische und verbale Aggression
-Aggression wird letzendlich auf zwei verschiedene Art und Weisen ausgedrückt. Wenn sie in Form von Schlägen, Tritten, oder jeglicher weiter Handlungen, die dazu führen, dass eine Person physisch verletzt wird, ausgedrückt wird, dann handelt es sich um \textit{physische} Aggression \parencite{impulsive_instrumental_aggro_healtline, physische_verbale_aggro, physische_verbale_aggro_2}. Bei der \textit{verbale} Aggression wiederum handelt es sich um Worte, die einen schädigenden Effekt haben. Es handelt sich dabei um Beschimpfungen, Drohungen oder Mobbing, um Einige zu nennen \parencite{physische_verbale_aggro, physische_verbale_aggro_2, impulsive_instrumental_aggro_healtline}. Obwohl der Schaden physicher Aggression einfacher zu erkennen ist, sind die Kosten verbaler Aggression hoch. Mobbingopfer wießen im vergleich zu anderen Kindern gehäuft Depression, Angstzustände, Einsamkeit und Ablehnung durch Gleichaltrige auf \parencite{ausmaß_verbale_aggro}.
+Aggression wird letzendlich auf zwei verschiedene Arten ausgedrückt. Wenn sie in Form von Schlägen, Tritten, oder jeglicher weiter Handlungen, die dazu führen, dass eine Person physisch verletzt wird, ausgedrückt wird, dann handelt es sich um \textit{physische} Aggression \parencite{impulsive_instrumental_aggro_healtline, physische_verbale_aggro, physische_verbale_aggro_2}. Bei der \textit{verbalen} Aggression wiederum handelt es sich um Worte, die einen schädigenden Effekt haben sollen. Es handelt sich dabei um Beschimpfungen, Drohungen oder Mobbing, um Einige zu nennen \parencite{physische_verbale_aggro, physische_verbale_aggro_2, impulsive_instrumental_aggro_healtline}. Obwohl der Schaden physicher Aggression einfacher zu erkennen ist, sind die Konsequenzen verbaler Aggression langfristig höher. Mobbingopfer wießen im vergleich zu anderen Kindern gehäuft Depression, Angstzustände, Einsamkeit und Ablehnung durch Gleichaltrige auf \parencite{ausmaß_verbale_aggro}.
 
 
 
@@ -60,4 +58,4 @@ In der Forschung gibt es mehrere Modelle und Theorien, die sich  mit der Entsteh
 
 Bei der Verstärkung wird aggressives Verhalten belohnt, wodurch das Kind lernt, dass solches Benehmen angebracht ist. Die Belohnung tritt in Kraft, durch die Erreichung eines zuvor festgelegten Ziels oder durch die Erfahrung sozialer Annerkennung als Folge des aggressiven Verhaltens. Unter direkter Verstärkung ist damzufolge der Effekt positiver Konsequenzen auf aggressives Verhalten zu verstehen \parencite{Aggro_Theorie_Buch}.
 
-Das Modelllernen geht davon aus, dass die Etablierung von aggressivem Verhalten keine eigene motorische Erfahrung benötigt. Laut diesem Mechanismus lernt das Individuum durch Beobachtung aggressiven Verhaltens, dieses anzuwenden. Durch die Belohnung oder Bestrafung der beobachteten Person lernt das Individuum welche Formen von Aggression in welchen Umgebungen und zu welchen Ausmaßen toleriert werden \parencite{Aggro_Theorie_Buch}.
+Das Modelllernen geht davon aus, dass die Etablierung aggressiven Verhaltens keine eigene, motorische Erfahrung benötigt. Laut diesem Mechanismus lernt das Individuum durch Beobachtung aggressiven Verhaltens, dieses anzuwenden. Durch die Belohnung oder Bestrafung der beobachteten Person lernt das Individuum, welche Formen von Aggression in welchen Umgebungen und zu welchen Ausmaßen toleriert werden \parencite{Aggro_Theorie_Buch}.
