--- a/2 Theorie/2.2.3 Hypothese 3.tex
+++ b/2 Theorie/2.2.3 Hypothese 3.tex
@@ -1,10 +1,10 @@
 \subsection{Hypothese 3}    \label{subsec_2.2.3}
-\textcite{H2_u_3_Bhogal_2016} untersuchten in ihrer Studie 121 Studierende auf ihre Akzeptanz von Vergewaltigungsmythen und ihre Aggression in Form von physischer und verbaler Aggression, Ärger und Misstrauen. Sie kamen zum Entschluss, dass Männer eine höhere Akzeptanz von Vergewaltigungsmythen haben. Diese Mythen stellen das, meist weibliches, Opfer als Mitschuldige da. Diese sichtweise des Opfers ist im Einklang mit den Mythen von häuslicher Gewalt. Ein weiteres Ergebnis der Untersuchung von \textcite{H2_u_3_Bhogal_2016} war, dass die physische Aggression bei Männern signifikant höher ist, verglichen mit den Frauen.
+\textcite{H2_u_3_Bhogal_2016} untersuchten in ihrer Studie 121 Studierende auf ihre Akzeptanz von Vergewaltigungsmythen und ihre Aggression in Form von physischer und verbaler Aggression, Ärger und Misstrauen. Sie kamen zum Entschluss, dass Männer eine höhere Akzeptanz von Vergewaltigungsmythen haben. Diese Mythen stellen das, meist weibliche, Opfer als Mitschuldige da. Diese sichtweise des Opfers ist im Einklang mit den Mythen von häuslicher Gewalt. Ein weiteres Ergebnis der Untersuchung von \textcite{H2_u_3_Bhogal_2016} ist, dass die physische Aggression bei Männern signifikant höher ist als bei Frauen.
 
-Laut \textcite{H3_MFUnterschied} sind Feministen der Meinung, dass Frauen ihre Aggressivität unterdrücken, gleichzeitig sind biologisch Positionierte der Auffassung, dass Frauen nicht die gleichen Fähigkeiten beziehungsweise nicht das gleiche Bedürfniss haben, zu reagieren, so wie Männer es haben. Eine weitere Erklärung geht davon aus, dass Frauen das selbe biologische Potenzial für Aggressivität aufweisen, aber die Gesellschaft solch ein Verhalten ausschließlich bei Männern fördert. Die Verhaltensbiologie betrachtend, sind Männchen auf Grund von Testostron aggressiver als Weibchen. Obwohl Artenübergreifende Vergleiche mit Obhut zu genießen sind, bietet diese Tatsache einen starken Anhaltspunkt für einen Geschlechterunterschied menschlicher Aggressivität.
+Laut \textcite{H3_MFUnterschied} sind Feministen der Meinung, dass Frauen ihre Aggressivität unterdrücken, gleichzeitig sind biologisch Positionierte der Auffassung, dass Frauen nicht die gleichen Fähigkeiten beziehungsweise nicht das gleiche Bedürfniss haben, aggressiv zu reagieren, so wie Männer es haben. Eine weitere Erklärung geht davon aus, dass Frauen das selbe biologische Potenzial für Aggressivität aufweisen, aber die Gesellschaft solch ein Verhalten ausschließlich bei Männern fördert. Die Verhaltensbiologie betrachtend, sind Männchen auf Grund von Testostron aggressiver als Weibchen. Obwohl artenübergreifende Vergleiche mit Vorsicht zu betrachten sind, bietet diese Tatsache einen starken Anhaltspunkt, dass menschliche Aggressivität geschlechterspezifisch zu behandelnd ist.
 
-Im Rahmen einer Studie von $N$~=~329 Probanden zwischen 15 und 19 Jahren untersuchten \textcite{H3_2020} die Existenz sexualisierter Gewalt in romantischen Beziehungen, mögliche Zusammenhänge zwischen Mythen über sexualisierte Aggression und sexualisiertes Durchsetzungsvermögen und ihre möglichen geschlechterspezifischen Unterschiede. Ihre Ergebnisse zeigen, dass die männlichen Jugendlichen häufiger Täter sexualisierter Gewalt waren, und dass die männlichen Probanden vermehrt Mythen über sexualisierte Aggression Glauben schenkten. Das behandelte Thema des verwendeten Fragebogens ähnelt denen des DVMAS.
+Im Rahmen einer Studie von $N$~=~329 Probanden zwischen 15 und 19 Jahren untersuchten \textcite{H3_2020} die Existenz sexualisierter Gewalt in romantischen Beziehungen, mögliche Zusammenhänge zwischen Mythen über sexualisierte Aggression und sexualisiertes Durchsetzungsvermögen und ihre möglichen geschlechterspezifischen Unterschiede. Ihre Ergebnisse zeigen, dass die männlichen Jugendlichen häufiger Täter sexualisierter Gewalt sind, und dass die männlichen Probanden vermehrt Mythen über sexualisierte Aggression Glauben schenken. Das behandelte Thema ihres verwendeten Fragebogens ähnelt denen der DVMAS.
 
-Aufgrund von \textcite{H2_u_3_Bhogal_2016, H3_MFUnterschied, H3_2020} liegt die Vermutung nahe, dass das Geschecht der Probanden eine moderierenden Rolle im Zusammenhang zwischen Akzeptanz von Gewaltmythen und Aggression hat. Aus diesem Gedanke ergibt sich die folgende Hypothese: Der Zusammenhang zwischen Akzeptanz von Gewaltmythen und Aggression wird durch das Geschlecht moderiert.
+Aufgrund von \textcite{H2_u_3_Bhogal_2016, H3_MFUnterschied, H3_2020} liegt die Vermutung nahe, dass das Geschecht der Probanden eine moderierenden Rolle im Zusammenhang zwischen Aggression und Akzeptanz von Gewaltmythen hat. Aus diesem Gedanke ergibt sich die folgende Hypothese: Der Zusammenhang zwischen Aggression und Akzeptanz von Gewaltmythen wird durch das Geschlecht moderiert.
 
 % Durch die in Kapitel 1.4 jeweiligen Studien von Haj-Yahia (2003), McElligott (2011), George und Martínez (2002) und Acosved und Long (2006) liegt der Gedanken nahe, dass der kulturelle Hintergrund der Betroffenen Auswirkungen auf die Wahrnehmung und daraus resultierende Verantwortungszuschreibung der Gesellschaft hat. Daraus ergibt sich die gerichtete Unterschiedshypothese:
