--- a/2 Theorie/Theorie.tex
+++ b/2 Theorie/Theorie.tex
@@ -5,7 +5,7 @@ In diesem Kapitel werden zunächst die verwendeten Konstrukte Aggressivität und
 
 % 2.1 Konstrukte:
 \section{Konstrukte}    \label{sec_2.1}
-Im Anschluss erfolgt in den Unterkapiteln ,  und  eine Darbietung der einzelnen Konstrukte. Beginnend werden in Kapitel~\ref{subsec_2.1.1} Aggressivität und Aggression erläutert und dessen Unterschied zur Gewalt verdeutlicht. Anschließend erfolgt eine Darbietung verschiedener Arten von Aggression und Theorien, die die Entstehung von Aggression versuchen zu erklären. In Kapitel ~\ref{subsec_2.1.2} wird häusliche Gewalt mit ihren Mustern und Arten präsentiert. Dieses Unterkapitel geht anschließend auf mögliche Ursachen und Aufrechterhaltung und abschließend auf die Folgen von Gewalt ein. Inhalt dieses Kapitels ist auch eine kurze Erläuterung bezüglich der Erfüllung gewisses Artikel der Istambul Konvention \parencite{Istambul_Konvention}. Im abschließenden Kapitel ~\ref{subsec_2.1.3} Gewaltmythen wird dieser Begriff aufgefasst, sowie das Victim Blaming. Zum Schluss erfolgen theoretische Ansätze, die versuchen das Phänomen des Victim Blamings zu erklären.
+Im Anschluss erfolgt in den Unterkapiteln eine Einführung in die einzelnen Konstrukte. Beginnend werden in Kapitel~\ref{subsec_2.1.1} Aggressivität und Aggression erläutert und dessen Unterschied zur Gewalt verdeutlicht. Anschließend erfolgt eine Vorstellung verschiedener Arten von Aggression und Theorien, die versuchen, die Entstehung von Aggression zu erklären. In Kapitel ~\ref{subsec_2.1.2} wird häusliche Gewalt mit ihren Mustern und Arten präsentiert. Dieses Unterkapitel geht anschließend auf mögliche Ursachen und Aufrechterhaltung sowie auf die Folgen von Gewalt ein. Inhalt dieses Kapitels ist auch eine kurze Erläuterung bezüglich der Erfüllung des Artikel 13 der Istambul Konvention \parencite{Istambul_Konvention}. Im abschließenden Kapitel ~\ref{subsec_2.1.3} Gewaltmythen wird auf diesen Begriff und das Victim Blaming eingegangen.
 
 \input{2 Theorie/2.1.1 Aggressivität.tex}
 \input{2 Theorie/2.1.2 Häusliche Gewalt.tex}
